kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-deployment
  labels:
    app: tasky
spec:
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: 324037288864.dkr.ecr.us-east-2.amazonaws.com/wiz-tasky:latest
        ports:
        - name: http
          containerPort: 8080
