kubernetes-files/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  labels:
    app: tasky
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      
#Creates a static IP for all services for easy access.
