kubernetes-files/kubeFiles.yaml

apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  labels:
    app: tasky
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-deployment
  labels:
    app: tasky
spec:
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: 324037288864.dkr.ecr.us-east-2.amazonaws.com/wiz-tasky:latest
        ports:
        - name: http
          containerPort: 8080
        
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasky-service
                port: 
                  number: 8080
